Agregando la tabla

--- a/html/index1.html
+++ b/html/index1.html
@@ -10,6 +10,11 @@
         <input id="1" name="primero"/>
         <input id="2" name="segundo"/>
         <input type="submit"/>
+        <table class="tabla1">
+            <tr>
+                <td> No se que es</td>
+            </tr>
+        </table>
     </form>
 </body>
 </html>
