Subiendo cambios desde mi otro pc

--- a/html/index1.html
+++ b/html/index1.html
@@ -10,6 +10,8 @@
         <input id="1" name="primero"/>
         <input id="2" name="segundo"/>
         <input type="submit"/>
+
+        <p>Hola mundo</p>
     </form>
 </body>
 </html>
